--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0px;
+}
+
 h1,a
 {
   font-family: 'Montserrat', sans-serif;
@@ -15,8 +19,9 @@ h1,a
 }
 
 .links{
-  margin: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
+  margin: 0px;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 html {
